# llm4graphgen-repro-stage0-4-bundle

./: .gitignore  AGENTS.md  Makefile  README.md  SHA256清单.csv  SPEC.md  p0_strict_analysis.py  pyproject.toml  run_llama2_medium.sh  run_llama2_stage4.sh  run_remaining.sh  run_rerun_maxtok2048.sh  sitecustomize.py  仓库结构说明.md  复现分析报告.md  复现分析报告_v2.md  复现分析报告_v3.md  打包说明.md
.claude/: settings.local.json
docs/: 阶段0_复现规格与中文日志规范.md
llm4graphgen/: __init__.py
runs/: experiment_status.json
runs/20260214_140406/: parser_result.json
runs/20260214_140406_fail/: llm_io.jsonl
runs/20260214_141637/: rule_based_metrics.csv  rule_based_samples.csv
runs/20260214_142537/: distribution_metrics.csv  llm_io.jsonl
runs/20260214_143230/: failure_cases.csv  property_metrics.csv  property_samples.csv
runs/20260215_135832/: failure_cases.csv  llm_io.jsonl  rule_based_samples.csv  rule_based_summary.csv
runs/20260215_135938/: distribution_metrics.csv  distribution_samples.csv  llm_io.jsonl
runs/20260215_140020/: failure_cases.csv  llm_io.jsonl  property_samples.csv
runs/20260215_141951/: failure_cases_r1.csv  failure_cases_r2.csv  llm_io_r1.jsonl  llm_io_r2.jsonl  llm_io_r3.jsonl  rule_based_metrics_r1.csv  rule_based_metrics_r2.csv  rule_based_metrics_r3.csv  rule_based_samples_r1.csv  rule_based_samples_r2.csv  rule_based_samples_r3.csv  rule_based_summary.csv
runs/20260215_163529/: failure_cases.csv  llm_io.jsonl  rule_based_summary.csv
tests/: test_smoke.py  test_stage1_smoke.py  test_stage2_rule_based.py  test_stage3_distribution.py  test_stage4_property.py
(+364 files in other folders)
