[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4graphgen-repro"
version = "0.2.0"
description = "LLM4GraphGen 论文复现工程（对齐论文实验设计）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
mol = [
    "rdkit>=2023.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "rdkit>=2023.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
